--- a/values.yaml
+++ b/values.yaml
@@ -65,7 +65,6 @@ images:
   initContainer:
     initStorage: onlyoffice/4testing-docspace-bin-share
     waitStorage: onlyoffice/4testing-docspace-wait-bin-share
-  people: onlyoffice/4testing-docspace-people-server
   apiSystem: onlyoffice/4testing-docspace-api-system
   api: onlyoffice/4testing-docspace-api
   backup: onlyoffice/4testing-docspace-backup
@@ -260,17 +259,6 @@ podAntiAffinity:
   topologyKey: kubernetes.io/hostname
   weight: "100"
 
-deploymetsUpdateStrategy:
-  type: RollingUpdate
-  rollingUpdate:
-    maxUnavailable: 25%
-    maxSurge: 25%
-
-## App People Server Deployment parameters
-##
-onlyofficePeopleServer:
-  replicaCount: 2
-
 ## DocSpace Files Deployment parameters
 ## This block defines the parameters common to all the Pods of this deployment
 ##
@@ -391,6 +379,127 @@ files:
     limits:
       memory: "4Gi"
       cpu: "4000m"
+
+## DocSpace peopleServer Deployment parameters
+## This block defines the parameters common to all the Pods of this deployment
+##
+peopleServer:
+  ## peopleServer.replicaCount Number of People Server replicas to deploy
+  ## If the `peopleServer.autoscaling.enabled` parameter is enabled, it is ignored
+  replicaCount: 1
+  ## Update strategy used to replace old Pods by new ones
+  updateStrategy:
+    ## peopleServer.updateStrategy.type People Server deployment update strategy type
+    ## Allowed values: `RollingUpdate` or `Recreate`
+    type: RollingUpdate
+    ## peopleServer.updateStrategy.rollingUpdate Used only when `peopleServer.updateStrategy.type=RollingUpdate`
+    rollingUpdate:
+      ## peopleServer.updateStrategy.rollingUpdate.maxUnavailable Maximum number of People Server Pods unavailable during the update process
+      maxUnavailable: 25%
+      ## peopleServer.updateStrategy.rollingUpdate.maxSurge Maximum number of People Server Pods created over the desired number of Pods
+      maxSurge: 25%
+  ## Pod affinity rules for People Server Pods scheduling by nodes relative to other Pods
+  ## Pod affinity allow you to constrain which nodes People Server Pods can be scheduled on based on the labels of Pods already running on that node
+  ## ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
+  ## Example:
+  ## podAffinity:
+  ##   requiredDuringSchedulingIgnoredDuringExecution:
+  ##   - labelSelector:
+  ##       matchExpressions:
+  ##       - key: app
+  ##         operator: In
+  ##         values:
+  ##         - store
+  ##     topologyKey: topology.kubernetes.io/zone
+  ##
+  podAffinity: {}
+  ## Node affinity rules for People Server Pods scheduling by nodes
+  ## Node affinity allow you to constrain which nodes People Server Pod can be scheduled on based on node labels
+  ## ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+  ## Example:
+  ## nodeAffinity:
+  ##   requiredDuringSchedulingIgnoredDuringExecution:
+  ##     nodeSelectorTerms:
+  ##     - matchExpressions:
+  ##       - key: topology.kubernetes.io/zone
+  ##         operator: In
+  ##         values:
+  ##         - zone1
+  ##         - zone2
+  ##
+  nodeAffinity: {}
+  ## People Server container image parameters
+  image:
+    ## peopleServer.image.repository People Server container image repository
+    repository: onlyoffice/4testing-docspace-people-server
+    ## peopleServer.image.tag People Server container image tag
+    ## If set to, it takes priority over the `images.tag`
+    tag: ""
+    ## peopleServer.image.pullPolicy People Server container image pull policy
+    pullPolicy: IfNotPresent
+  ## peopleServer.containerPorts.app People Server container port
+  containerPorts:
+    app: 5050
+  ## Probe used for the People Server container: startup, readiness and liveness probes
+  ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+  ## The parameters below for startup probes are used only when `peopleServer.startupProbe.enabled=true`
+  startupProbe:
+    ## peopleServer.startupProbe.enabled Enable startupProbe for People Server container
+    enabled: false
+    httpGet:
+      ## peopleServer.startupProbe.httpGet.path Checking the path for startupProbe
+      path: /liveness
+      ## peopleServer.startupProbe.httpGet.port Checking the port for startupProbe
+      port: 5050
+    ## peopleServer.startupProbe.failureThreshold Failure threshold for startupProbe
+    failureThreshold: 30
+    ## peopleServer.startupProbe.periodSeconds Period seconds for startupProbe
+    periodSeconds: 10
+  ## The parameters below for readiness probes are used only when `peopleServer.readinessProbe.enabled=true`
+  readinessProbe:
+    ## peopleServer.readinessProbe.enabled Enable readinessProbe for People Server container
+    enabled: false
+    ## peopleServer.readinessProbe.failureThreshold Failure threshold for readinessProbe
+    failureThreshold: 2
+    httpGet:
+      ## peopleServer.readinessProbe.httpGet.path Checking the path for readinessProbe
+      path: /liveness
+      ## peopleServer.readinessProbe.httpGet.port Checking the port for readinessProbe
+      port: 5050
+    ## peopleServer.readinessProbe.periodSeconds Period seconds for readinessProbe
+    periodSeconds: 10
+    ## peopleServer.readinessProbe.successThreshold Success threshold for readinessProbe
+    successThreshold: 1
+    ## peopleServer.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+    timeoutSeconds: 3
+  ## The parameters below for liveness probes are used only when `peopleServer.livenessProbe.enabled=true`
+  livenessProbe:
+    ## peopleServer.livenessProbe.enabled Enable livenessProbe for People Server container
+    enabled: false
+    ## peopleServer.livenessProbe.failureThreshold Failure threshold for livenessProbe
+    failureThreshold: 3
+    httpGet:
+      ## peopleServer.livenessProbe.httpGet.path Checking the path for livenessProbe
+      path: /liveness
+      ## peopleServer.livenessProbe.httpGet.port Checking the port for livenessProbe
+      port: 5050
+    ## peopleServer.livenessProbe.periodSeconds Period seconds for livenessProbe
+    periodSeconds: 10
+    ## peopleServer.livenessProbe.successThreshold Success threshold for livenessProbe
+    successThreshold: 1
+    ## peopleServer.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+    timeoutSeconds: 5
+  ## People Server container resource requests and limits
+  ## ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  ## peopleServer.resources.requests The requested resources for the People Server container
+  ## peopleServer.resources.limits The resources limits for the People Server container
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "2Gi"
+      cpu: "2000m"
 
 ## DocSpace Proxy Deployment parameters
 ## This block defines the parameters common to all the Pods of this deployment
