--- a/values.yaml
+++ b/values.yaml
@@ -880,6 +880,118 @@ api:
       memory: "2Gi"
       cpu: "2000m"
 
+# DocSpace Backup StatefulSet parameters
+#
+backup:
+  # Update strategy used to replace old Pods by new ones
+  updateStrategy:
+    # backup.updateStrategy.type Backup StatefulSet update strategy type
+    # Allowed values: `RollingUpdate` or `OnDelete`
+    type: RollingUpdate
+  # Pod affinity rules for Backup Pod scheduling by nodes relative to other Pods
+  # Pod affinity allow you to constrain which nodes Backup Pods can be scheduled on based on the labels of Pods already running on that node
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
+  # Example:
+  # podAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     podAffinityTerm:
+  #       labelSelector:
+  #         matchExpressions:
+  #         - key: app
+  #           operator: NotIn
+  #           values:
+  #           - database
+  #       topologyKey: kubernetes.io/hostname
+  podAffinity: {}
+  # Node affinity rules for Backup Pod scheduling by nodes
+  # Node affinity allow you to constrain which nodes backup Pod can be scheduled on based on node labels
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+  # Example:
+  # nodeAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     preference:
+  #       matchExpressions:
+  #       - key: kubernetes.io/name
+  #         operator: In
+  #         values:
+  #         - name1
+  #         - name2
+  nodeAffinity: {}
+  # Backup container image parameters
+  image:
+    # backup.image.repository Backup container image repository
+    repository: onlyoffice/4testing-docspace-backup
+    # backup.image.tag Backup container image tag
+    # If set to, it takes priority over the `images.tag`
+    tag: ""
+    # backup.image.pullPolicy Backup container image pull policy
+    pullPolicy: IfNotPresent
+  # backup.containerPorts.app Backup container port
+  containerPorts:
+    app: 5050
+  # Probe used for the Backup container: startup, readiness and liveness probes
+  # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+  # The parameters below for startup probes are used only when `backup.startupProbe.enabled=true`
+  startupProbe:
+    # backup.startupProbe.enabled Enable startupProbe for Backup container
+    enabled: false
+    httpGet:
+      # backup.startupProbe.httpGet.path Checking the path for startupProbe
+      path: /liveness
+      # backup.startupProbe.httpGet.port Checking the port for startupProbe
+      port: 5050
+    # backup.startupProbe.failureThreshold Failure threshold for startupProbe
+    failureThreshold: 30
+    # backup.startupProbe.periodSeconds Period seconds for startupProbe
+    periodSeconds: 10
+  # The parameters below for readiness probes are used only when `backup.readinessProbe.enabled=true`
+  readinessProbe:
+    # backup.readinessProbe.enabled Enable readinessProbe for Backup container
+    enabled: false
+    # backup.readinessProbe.failureThreshold Failure threshold for readinessProbe
+    failureThreshold: 2
+    httpGet:
+      # backup.readinessProbe.httpGet.path Checking the path for readinessProbe
+      path: /liveness
+      # backup.readinessProbe.httpGet.port Checking the port for readinessProbe
+      port: 5050
+    # backup.readinessProbe.periodSeconds Period seconds for readinessProbe
+    periodSeconds: 10
+    # backup.readinessProbe.successThreshold Success threshold for readinessProbe
+    successThreshold: 1
+    # backup.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+    timeoutSeconds: 3
+  # The parameters below for liveness probes are used only when `backup.livenessProbe.enabled=true`
+  livenessProbe:
+    # backup.livenessProbe.enabled Enable livenessProbe for Backup container
+    enabled: false
+    # backup.livenessProbe.failureThreshold Failure threshold for livenessProbe
+    failureThreshold: 3
+    httpGet:
+      # backup.livenessProbe.httpGet.path Checking the path for livenessProbe
+      path: /liveness
+      # backup.livenessProbe.httpGet.port Checking the port for livenessProbe
+      port: 5050
+    # backup.livenessProbe.periodSeconds Period seconds for livenessProbe
+    periodSeconds: 10
+    # backup.livenessProbe.successThreshold Success threshold for livenessProbe
+    successThreshold: 1
+    ## backup.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+    timeoutSeconds: 5
+  # Backup container resource requests and limits
+  # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  # backup.resources.requests The requested resources for the Backup container
+  # backup.resources.limits The resources limits for the Backup container
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "2Gi"
+      cpu: "2000m"
+
 ## App common statefulset parameters
 ## This block defines common parameters for all statefulsets only
 ##
