--- a/values.yaml
+++ b/values.yaml
@@ -71,7 +71,6 @@ images:
   ssoauth: onlyoffice/4testing-docspace-ssoauth
   studioNotify: onlyoffice/4testing-docspace-studio-notify
   studio: onlyoffice/4testing-docspace-studio
-  clearEvents: onlyoffice/4testing-docspace-clear-events
   doceditor: onlyoffice/4testing-docspace-doceditor
   login: onlyoffice/4testing-docspace-login
   tag: v1.0.0
@@ -1094,6 +1093,118 @@ backupBackgroundTasks:
   # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
   # backupBackgroundTasks.resources.requests The requested resources for the Backup Background Tasks container
   # backupBackgroundTasks.resources.limits The resources limits for the Backup Background Tasks container
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "2Gi"
+      cpu: "2000m"
+
+# DocSpace Clear Events StatefulSet parameters
+#
+clearEvents:
+  # Update strategy used to replace old Pods by new ones
+  updateStrategy:
+    # clearEvents.updateStrategy.type Clear Events StatefulSet update strategy type
+    # Allowed values: `RollingUpdate` or `OnDelete`
+    type: RollingUpdate
+  # Pod affinity rules for Clear Events Pod scheduling by nodes relative to other Pods
+  # Pod affinity allow you to constrain which nodes Clear Events Pods can be scheduled on based on the labels of Pods already running on that node
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
+  # Example:
+  # podAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     podAffinityTerm:
+  #       labelSelector:
+  #         matchExpressions:
+  #         - key: app
+  #           operator: NotIn
+  #           values:
+  #           - database
+  #       topologyKey: kubernetes.io/hostname
+  podAffinity: {}
+  # Node affinity rules for Clear Events Pod scheduling by nodes
+  # Node affinity allow you to constrain which nodes Clear Events Pod can be scheduled on based on node labels
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+  # Example:
+  # nodeAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     preference:
+  #       matchExpressions:
+  #       - key: kubernetes.io/name
+  #         operator: In
+  #         values:
+  #         - name1
+  #         - name2
+  nodeAffinity: {}
+  # Clear Events container image parameters
+  image:
+    # clearEvents.image.repository Clear Events container image repository
+    repository: onlyoffice/4testing-docspace-clear-events
+    # clearEvents.image.tag Clear Events container image tag
+    # If set to, it takes priority over the `images.tag`
+    tag: ""
+    # clearEvents.image.pullPolicy Clear Events container image pull policy
+    pullPolicy: IfNotPresent
+  # clearEvents.containerPorts.app Clear Events container port
+  containerPorts:
+    app: 5050
+  # Probe used for the Clear Events container: startup, readiness and liveness probes
+  # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+  # The parameters below for startup probes are used only when `clearEvents.startupProbe.enabled=true`
+  startupProbe:
+    # clearEvents.startupProbe.enabled Enable startupProbe for Clear Events container
+    enabled: false
+    httpGet:
+      # clearEvents.startupProbe.httpGet.path Checking the path for startupProbe
+      path: /liveness
+      # clearEvents.startupProbe.httpGet.port Checking the port for startupProbe
+      port: 5050
+    # clearEvents.startupProbe.failureThreshold Failure threshold for startupProbe
+    failureThreshold: 30
+    # clearEvents.startupProbe.periodSeconds Period seconds for startupProbe
+    periodSeconds: 10
+  # The parameters below for readiness probes are used only when `clearEvents.readinessProbe.enabled=true`
+  readinessProbe:
+    # clearEvents.readinessProbe.enabled Enable readinessProbe for Clear Events container
+    enabled: false
+    # clearEvents.readinessProbe.failureThreshold Failure threshold for readinessProbe
+    failureThreshold: 2
+    httpGet:
+      # clearEvents.readinessProbe.httpGet.path Checking the path for readinessProbe
+      path: /liveness
+      # clearEvents.readinessProbe.httpGet.port Checking the port for readinessProbe
+      port: 5050
+    # clearEvents.readinessProbe.periodSeconds Period seconds for readinessProbe
+    periodSeconds: 10
+    # clearEvents.readinessProbe.successThreshold Success threshold for readinessProbe
+    successThreshold: 1
+    # clearEvents.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+    timeoutSeconds: 3
+  # The parameters below for liveness probes are used only when `clearEvents.livenessProbe.enabled=true`
+  livenessProbe:
+    # clearEvents.livenessProbe.enabled Enable livenessProbe for Clear Events container
+    enabled: false
+    # clearEvents.livenessProbe.failureThreshold Failure threshold for livenessProbe
+    failureThreshold: 3
+    httpGet:
+      # clearEvents.livenessProbe.httpGet.path Checking the path for livenessProbe
+      path: /liveness
+      # clearEvents.livenessProbe.httpGet.port Checking the port for livenessProbe
+      port: 5050
+    # clearEvents.livenessProbe.periodSeconds Period seconds for livenessProbe
+    periodSeconds: 10
+    # clearEvents.livenessProbe.successThreshold Success threshold for livenessProbe
+    successThreshold: 1
+    ## clearEvents.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+    timeoutSeconds: 5
+  # Clear Events container resource requests and limits
+  # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  # clearEvents.resources.requests The requested resources for the Clear Events container
+  # clearEvents.resources.limits The resources limits for the Clear Events container
   resources:
     requests:
       memory: "256Mi"
