--- a/templates/configmaps/app-proxy.yaml
+++ b/templates/configmaps/app-proxy.yaml
@@ -18,6 +18,6 @@ data:
   SERVICE_SSOAUTH: {{ .Values.connections.ssoauthHost }}:{{ .Values.containerPorts.app }}
   DOCUMENT_SERVER: {{ .Values.connections.documentServerHost }}
   SERVICE_CLEAR_EVENTS: {{ .Values.connections.clearEventsHost }}:{{ .Values.containerPorts.app }}
-  SERVICE_DOCEDITOR: {{ .Values.connections.doceditorHost }}:{{ .Values.containerPorts.doceditor }}
+  SERVICE_DOCEDITOR: {{ .Values.connections.doceditorHost }}:{{ .Values.doceditor.containerPorts.doceditor }}
   SERVICE_BACKUP_BACKGRUOND_TASKS: {{ .Values.connections.backupBackgruondTasksHost }}:{{ .Values.containerPorts.app }}
   SERVICE_LOGIN: {{ .Values.connections.loginHost }}:{{ .Values.containerPorts.login }}
